Optimization: replace new Integer -> Integer.valueOf()