@@ -643,7 +643,7 @@ public class Chunk implements Element {
 	 */
 	public Chunk setTextRenderMode(int mode, float strokeWidth,
 			Color strokeColor) {
-		return setAttribute(TEXTRENDERMODE, new Object[] { new Integer(mode),
+		return setAttribute(TEXTRENDERMODE, new Object[] { Integer.valueOf(mode),
 				new Float(strokeWidth), strokeColor });
 	}
 
@@ -704,8 +704,7 @@ public class Chunk implements Element {
 	 */
 
 	public Chunk setRemoteGoto(String filename, int page) {
-		return setAttribute(REMOTEGOTO, new Object[] { filename,
-				new Integer(page) });
+		return setAttribute(REMOTEGOTO, new Object[] { filename, Integer.valueOf(page) });
 	}
 
 	/** Key for local goto. */
