@@ -575,7 +575,7 @@ public class AcroFields {
                             PRIndirectReference por = (PRIndirectReference)po;
                             BaseFont bp = new DocumentFont((PRIndirectReference)po);
                             tx.setFont(bp);
-                            Integer porkey = new Integer(por.getNumber());
+                            Integer porkey = Integer.valueOf(por.getNumber());
                             BaseFont porf = (BaseFont)extensionFonts.get(porkey);
                             if (porf == null) {
                                 if (!extensionFonts.containsKey(porkey)) {
@@ -1949,7 +1949,7 @@ public class AcroFields {
          * @param pg
          */
         void addPage(int pg) {
-            page.add(new Integer(pg));
+            page.add(Integer.valueOf(pg));
         }
 
         /**
@@ -1959,7 +1959,7 @@ public class AcroFields {
          * @param idx
          */
         void forcePage(int idx, int pg) {
-            page.set(idx, new Integer( pg ));
+            page.set(idx, Integer.valueOf( pg ));
         }
 
         /**
@@ -1980,7 +1980,7 @@ public class AcroFields {
          * @param order
          */
         void addTabOrder(int order) {
-            tabOrder.add(new Integer(order));
+            tabOrder.add(Integer.valueOf(order));
         }
     }
 
