@@ -50,11 +50,13 @@
 package com.lowagie.text.pdf;
 
 import com.lowagie.text.ExceptionConverter;
+
 import java.io.IOException;
 import java.util.HashMap;
 
 import com.lowagie.text.factories.RomanAlphabetFactory;
 import com.lowagie.text.factories.RomanNumberFactory;
+
 import java.util.Arrays;
 
 /** Page labels are used to identify each
@@ -115,7 +117,7 @@ public class PdfPageLabels {
             dic.put(PdfName.P, new PdfString(text, PdfObject.TEXT_UNICODE));
         if (firstPage != 1)
             dic.put(PdfName.ST, new PdfNumber(firstPage));
-        map.put(new Integer(page - 1), dic);
+        map.put(Integer.valueOf(page - 1), dic);
     }
 
     /** Adds or replaces a page label. The first logical page has the default
@@ -149,7 +151,7 @@ public class PdfPageLabels {
     public void removePageLabel(int page) {
         if (page <= 1)
             return;
-        map.remove(new Integer(page - 1));
+        map.remove(Integer.valueOf(page - 1));
     }
 
     /** Gets the page label dictionary to insert into the document.
@@ -187,7 +189,7 @@ public class PdfPageLabels {
 		String prefix = "";
 		char type = 'D';
 		for (int i = 0; i < n; i++) {
-			current = new Integer(i);
+			current = Integer.valueOf(i);
 			if (numberTree.containsKey(current)) {
 				PdfDictionary d = (PdfDictionary)PdfReader.getPdfObjectRelease((PdfObject)numberTree.get(current));
 				if (d.contains(PdfName.ST)) {
