@@ -84,7 +84,7 @@ class PdfReaderInstance {
             throw new IllegalArgumentException("PdfReader not opened with owner password");
         if (pageNumber < 1 || pageNumber > reader.getNumberOfPages())
             throw new IllegalArgumentException("Invalid page number: " + pageNumber);
-        Integer i = new Integer(pageNumber);
+        Integer i = Integer.valueOf(pageNumber);
         PdfImportedPage pageT = (PdfImportedPage)importedPages.get(i);
         if (pageT == null) {
             pageT = new PdfImportedPage(this, writer, pageNumber);
@@ -96,7 +96,7 @@ class PdfReaderInstance {
     int getNewObjectNumber(int number, int generation) {
         if (myXref[number] == 0) {
             myXref[number] = writer.getIndirectReferenceNumber();
-            nextRound.add(new Integer(number));
+            nextRound.add(Integer.valueOf(number));
         }
         return myXref[number];
     }
@@ -133,7 +133,7 @@ class PdfReaderInstance {
         dic.put(PdfName.RESOURCES, PdfReader.getPdfObjectRelease(page.get(PdfName.RESOURCES)));
         dic.put(PdfName.TYPE, PdfName.XOBJECT);
         dic.put(PdfName.SUBTYPE, PdfName.FORM);
-        PdfImportedPage impPage = (PdfImportedPage)importedPages.get(new Integer(pageNumber));
+        PdfImportedPage impPage = (PdfImportedPage)importedPages.get(Integer.valueOf(pageNumber));
         dic.put(PdfName.BBOX, new PdfRectangle(impPage.getBoundingBox()));
         PdfArray matrix = impPage.getMatrix();
         if (matrix == null)
