@@ -295,7 +295,7 @@ class Type1Font extends BaseFont
     int getRawWidth(int c, String name) {
         Object metrics[];
         if (name == null) { // font specific
-            metrics = (Object[])CharMetrics.get(new Integer(c));
+            metrics = (Object[])CharMetrics.get(Integer.valueOf(c));
         }
         else {
             if (name.equals(".notdef"))
@@ -406,8 +406,8 @@ class Type1Font extends BaseFont
                 isMetrics = false;
                 break;
             }
-            Integer C = new Integer(-1);
-            Integer WX = new Integer(250);
+            Integer C = Integer.valueOf(-1);
+            Integer WX = Integer.valueOf(250);
             String N = "";
             int B[] = null;
 
@@ -421,7 +421,7 @@ class Type1Font extends BaseFont
                 if (ident.equals("C"))
                     C = Integer.valueOf(tokc.nextToken());
                 else if (ident.equals("WX"))
-                    WX = new Integer((int)Float.parseFloat(tokc.nextToken()));
+                    WX = Integer.valueOf((int)Float.parseFloat(tokc.nextToken()));
                 else if (ident.equals("N"))
                     N = tokc.nextToken();
                 else if (ident.equals("B")) {
@@ -469,7 +469,7 @@ class Type1Font extends BaseFont
             {
                 String first = tok.nextToken();
                 String second = tok.nextToken();
-                Integer width = new Integer((int)Float.parseFloat(tok.nextToken()));
+                Integer width = Integer.valueOf((int)Float.parseFloat(tok.nextToken()));
                 Object relates[] = (Object[])KernPairs.get(first);
                 if (relates == null)
                     KernPairs.put(first, new Object[]{second, width});
@@ -793,13 +793,13 @@ class Type1Font extends BaseFont
             return false;
         Object obj[] = (Object[])KernPairs.get(first);
         if (obj == null) {
-            obj = new Object[]{second, new Integer(kern)};
+            obj = new Object[]{second, Integer.valueOf(kern)};
             KernPairs.put(first, obj);
             return true;
         }
         for (int k = 0; k < obj.length; k += 2) {
             if (second.equals(obj[k])) {
-                obj[k + 1] = new Integer(kern);
+                obj[k + 1] = Integer.valueOf(kern);
                 return true;
             }
         }
@@ -807,7 +807,7 @@ class Type1Font extends BaseFont
         Object obj2[] = new Object[size + 2];
         System.arraycopy(obj, 0, obj2, 0, size);
         obj2[size] = second;
-        obj2[size + 1] = new Integer(kern);
+        obj2[size + 1] = Integer.valueOf(kern);
         KernPairs.put(first, obj2);
         return true;
     }
@@ -815,7 +815,7 @@ class Type1Font extends BaseFont
     protected int[] getRawCharBBox(int c, String name) {
         Object metrics[];
         if (name == null) { // font specific
-            metrics = (Object[])CharMetrics.get(new Integer(c));
+            metrics = (Object[])CharMetrics.get(Integer.valueOf(c));
         }
         else {
             if (name.equals(".notdef"))
