@@ -127,7 +127,7 @@ public class Type3Font extends BaseFont {
         if (c == 0 || c > 255)
             throw new IllegalArgumentException("The char " + (int)c + " doesn't belong in this Type3 font");
         usedSlot[c] = true;
-        Integer ck = new Integer(c);
+        Integer ck = Integer.valueOf(c);
         Type3Glyph glyph = (Type3Glyph)char2glyph.get(ck);
         if (glyph != null)
             return glyph;
@@ -237,7 +237,7 @@ public class Type3Font extends BaseFont {
                 s = "a" + c2;
             PdfName n = new PdfName(s);
             diffs.add(n);
-            Type3Glyph glyph = (Type3Glyph)char2glyph.get(new Integer(c2));
+            Type3Glyph glyph = (Type3Glyph)char2glyph.get(Integer.valueOf(c2));
             PdfStream stream = new PdfStream(glyph.toPdf(null));
             stream.flateCompress(compressionLevel);
             PdfIndirectReference refp = writer.addToBody(stream).getIndirectReference();
