@@ -832,9 +832,9 @@ public class XfaForm {
                     String s = escapeSom(n2.getLocalName());
                     Integer i = (Integer)ss.get(s);
                     if (i == null)
-                        i = new Integer(0);
+                        i = Integer.valueOf(0);
                     else
-                        i = new Integer(i.intValue() + 1);
+                        i = Integer.valueOf(i.intValue() + 1);
                     ss.put(s, i);
                     if (hasChildren(n2)) {
                         stack.push(s + "[" + i.toString() + "]");
@@ -964,15 +964,15 @@ public class XfaForm {
                         }
                         Integer i;
                         if (annon) {
-                            i = new Integer(anform);
+                            i = Integer.valueOf(anform);
                             ++anform;
                         }
                         else {
                             i = (Integer)ss.get(nn);
                             if (i == null)
-                                i = new Integer(0);
+                                i = Integer.valueOf(0);
                             else
-                                i = new Integer(i.intValue() + 1);
+                                i = Integer.valueOf(i.intValue() + 1);
                             ss.put(nn, i);
                         }
                         stack.push(nn + "[" + i.toString() + "]");
@@ -989,10 +989,12 @@ public class XfaForm {
                         if (name != null) {
                             String nn = escapeSom(name.getNodeValue());
                             Integer i = (Integer)ff.get(nn);
-                            if (i == null)
-                                i = new Integer(0);
-                            else
-                                i = new Integer(i.intValue() + 1);
+                            if (i == null) {
+                                i = Integer.valueOf(0);
+                            }
+                            else {
+                                i = Integer.valueOf(i.intValue() + 1);
+                            }
                             ff.put(nn, i);
                             stack.push(nn + "[" + i.toString() + "]");
                             String unstack = printStack();
