@@ -195,7 +195,7 @@ public class JBIG2SegmentReader {
 			return os.toByteArray();
 		}
 		public void addSegment(JBIG2Segment s) {
-			segs.put(new Integer(s.segmentNumber), s);
+			segs.put(Integer.valueOf(s.segmentNumber), s);
 		}
 		
 	}
@@ -223,14 +223,14 @@ public class JBIG2SegmentReader {
 			do {
 				JBIG2Segment tmp = readHeader();
 				readSegment(tmp);
-				segments.put(new Integer(tmp.segmentNumber), tmp);
+				segments.put(Integer.valueOf(tmp.segmentNumber), tmp);
 			} while ( this.ra.getFilePointer() < this.ra.length() );
 		} else {
 			// D.2
 			JBIG2Segment tmp;
 			do {
 				tmp = readHeader();
-				segments.put(new Integer(tmp.segmentNumber), tmp);
+				segments.put(Integer.valueOf(tmp.segmentNumber), tmp);
 			} while ( tmp.type != END_OF_FILE );
 			Iterator segs = segments.keySet().iterator();
 			while ( segs.hasNext() ) {
@@ -257,7 +257,7 @@ public class JBIG2SegmentReader {
 			int page_bitmap_width = ra.readInt();
 			int page_bitmap_height = ra.readInt();
 			ra.seek(last);
-			JBIG2Page p = (JBIG2Page)pages.get(new Integer(s.page));
+			JBIG2Page p = (JBIG2Page)pages.get(Integer.valueOf(s.page));
 			if ( p == null ) {
 				throw new IllegalStateException("referring to widht/height of page we havent seen yet? " + s.page);
 			}
@@ -346,11 +346,11 @@ public class JBIG2SegmentReader {
 		s.page_association_size = page_association_size;
 		s.page_association_offset = page_association_offset;
 		
-		if ( segment_page_association > 0 && ! pages.containsKey(new Integer(segment_page_association)) ) {
-			pages.put(new Integer(segment_page_association), new JBIG2Page(segment_page_association, this));
+		if ( segment_page_association > 0 && ! pages.containsKey(Integer.valueOf(segment_page_association)) ) {
+			pages.put(Integer.valueOf(segment_page_association), new JBIG2Page(segment_page_association, this));
 		}
 		if ( segment_page_association > 0 ) {
-			((JBIG2Page)pages.get(new Integer(segment_page_association))).addSegment(s);
+			((JBIG2Page)pages.get(Integer.valueOf(segment_page_association))).addSegment(s);
 		} else {
 			globals.add(s);
 		}
@@ -401,15 +401,15 @@ public class JBIG2SegmentReader {
 	}
 
 	public int getPageHeight(int i) {
-		return ((JBIG2Page)pages.get(new Integer(i))).pageBitmapHeight;
+		return ((JBIG2Page)pages.get(Integer.valueOf(i))).pageBitmapHeight;
 	}
 
 	public int getPageWidth(int i) {
-		return ((JBIG2Page)pages.get(new Integer(i))).pageBitmapWidth;
+		return ((JBIG2Page)pages.get(Integer.valueOf(i))).pageBitmapWidth;
 	}
 
 	public JBIG2Page getPage(int page) {
-		return (JBIG2Page)pages.get(new Integer(page));
+		return (JBIG2Page)pages.get(Integer.valueOf(page));
 	}
 
 	public byte[] getGlobal(boolean for_embedding) {
