@@ -262,7 +262,7 @@ public class TIFFDirectory extends Object implements Serializable {
             }
             
             if (processTag) {
-            fieldIndex.put(new Integer(tag), new Integer(i));
+            fieldIndex.put(Integer.valueOf(tag), Integer.valueOf(i));
             Object obj = null;
             
             switch (type) {
@@ -398,7 +398,7 @@ public class TIFFDirectory extends Object implements Serializable {
      * or null if the tag is not present.
      */
     public TIFFField getField(int tag) {
-        Integer i = (Integer)fieldIndex.get(new Integer(tag));
+        Integer i = (Integer)fieldIndex.get(Integer.valueOf(tag));
         if (i == null) {
             return null;
         } else {
@@ -410,7 +410,7 @@ public class TIFFDirectory extends Object implements Serializable {
      * Returns true if a tag appears in the directory.
      */
     public boolean isTagPresent(int tag) {
-        return fieldIndex.containsKey(new Integer(tag));
+        return fieldIndex.containsKey(Integer.valueOf(tag));
     }
     
     /**
@@ -444,7 +444,7 @@ public class TIFFDirectory extends Object implements Serializable {
      * TIFF_UNDEFINED.
      */
     public byte getFieldAsByte(int tag, int index) {
-        Integer i = (Integer)fieldIndex.get(new Integer(tag));
+        Integer i = (Integer)fieldIndex.get(Integer.valueOf(tag));
         byte [] b = fields[i.intValue()].getAsBytes();
         return b[index];
     }
@@ -466,7 +466,7 @@ public class TIFFDirectory extends Object implements Serializable {
      * TIFF_SHORT, TIFF_SSHORT, TIFF_SLONG or TIFF_LONG.
      */
     public long getFieldAsLong(int tag, int index) {
-        Integer i = (Integer)fieldIndex.get(new Integer(tag));
+        Integer i = (Integer)fieldIndex.get(Integer.valueOf(tag));
         return fields[i.intValue()].getAsLong(index);
     }
     
@@ -487,7 +487,7 @@ public class TIFFDirectory extends Object implements Serializable {
      * TIFF_ASCII).
      */
     public float getFieldAsFloat(int tag, int index) {
-        Integer i = (Integer)fieldIndex.get(new Integer(tag));
+        Integer i = (Integer)fieldIndex.get(Integer.valueOf(tag));
         return fields[i.intValue()].getAsFloat(index);
     }
     
@@ -507,7 +507,7 @@ public class TIFFDirectory extends Object implements Serializable {
      * TIFF_ASCII).
      */
     public double getFieldAsDouble(int tag, int index) {
-        Integer i = (Integer)fieldIndex.get(new Integer(tag));
+        Integer i = (Integer)fieldIndex.get(Integer.valueOf(tag));
         return fields[i.intValue()].getAsDouble(index);
     }
     
