@@ -61,15 +61,11 @@ public class JTable2Pdf extends JFrame {
      */
     private void createTable() {
         Object[][] data ={
-            {"Mary", "Campione", "Snowboarding", new
-             Integer(5), Boolean.FALSE},
-             {"Alison", "Huml", "Rowing", new
-              Integer(3), Boolean.TRUE},
-              {"Kathy", "Walrath", "Chasing toddlers",
-               new Integer(2), Boolean.FALSE},
-               {"Mark", "Andrews", "Speed reading", new
-                Integer(20), Boolean.TRUE},
-                {"Angela", "Lih", "Teaching high school", new Integer(4), Boolean.FALSE}
+            {"Mary", "Campione", "Snowboarding", Integer.valueOf(5), Boolean.FALSE},
+            {"Alison", "Huml", "Rowing", Integer.valueOf(3), Boolean.TRUE},
+            {"Kathy", "Walrath", "Chasing toddlers",  Integer.valueOf(2), Boolean.FALSE},
+            {"Mark", "Andrews", "Speed reading", Integer.valueOf(20), Boolean.TRUE},
+            {"Angela", "Lih", "Teaching high school", Integer.valueOf(4), Boolean.FALSE}
         };
         
         String[] columnNames =
